update my email

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "HardyWen",
-            "email": "hardywen@foxmail.com"
+            "email": "hardy.wen@foxmail.com"
         }
     ],
     "require": {
